fix: corregir visibilidad de textos del formulario y titulos en modo oscuro

--- a/Trabajo-Grupal-Taller-de-mercado-y-tecnologia-web-1/estilos.css/ESTILOS.CSS
+++ b/Trabajo-Grupal-Taller-de-mercado-y-tecnologia-web-1/estilos.css/ESTILOS.CSS
@@ -116,15 +116,11 @@ body.oscuro #btn-modo {
 
 
 /* Completa el formulario */
-body.oscuro p, 
-body.oscuro label,
-body.oscuro form {
+body.oscuro p{
     color: #ffffff !important;
 }
 
 /* ¿Cómo comenzó esto? */
-body.oscuro .bs-card h2,
-body.oscuro .container h2,
 body.oscuro h2[style*="color"] {
-    color: #212529 !important;
+    color: deepskyblue !important;
 }
